--- a/student-home.html
+++ b/student-home.html
@@ -116,14 +116,14 @@
           </div>
         </div>
       </div>
-      <div style="display: flex; flex-direction: column; position: absolute; bottom: 70px; right: -6px;">
+      <div style="display: flex; flex-direction: column; position: absolute; bottom: 217px; right: 17px;">
         <div style="flex: 1;">
           <a class="btnCall" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
-              class="fa fa-fw fa-phone-square" style="font-size: 25px;"></i></a>
+              class="fa fa-fw fa-phone-square" style="font-size: 30px;"></i></a>
         </div>
         <div style="flex: 1;">
-          <a class="btnChat" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
-              class="fa fa-fw fa-wechat" style="font-size: 25px;"></i></a>
+          <a class="btnChat" style="margin-top: 20px; padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+              class="fa fa-fw fa-wechat" style="font-size: 30px;"></i></a>
         </div>
       </div>
     </footer>
