--- a/student-home.html
+++ b/student-home.html
@@ -121,8 +121,20 @@
           <a class="btnCall" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
               class="fa fa-fw fa-phone-square" style="font-size: 30px;"></i></a>
         </div>
-        <div style="flex: 1;">
-          <a class="btnChat" style="margin-top: 20px; padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+        <div style="flex: 1; margin-top: 20px;">
+          <a class="btnFullScreen" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+              class="fa fa-fw fa-arrows-alt" style="font-size: 30px;"></i></a>
+        </div>
+        <div style="flex: 1; margin-top: 20px;">
+          <a class="btnActivities" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+              class="fa fa-fw fa-pencil" style="font-size: 30px;"></i></a>
+        </div>
+        <div style="flex: 1; margin-top: 20px;">
+          <a class="btnFacultyAndStudents" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+              class="fa fa-fw fa-users" style="font-size: 30px;"></i></a>
+        </div>
+        <div style="flex: 1; margin-top: 20px;">
+          <a class="btnChat" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
               class="fa fa-fw fa-wechat" style="font-size: 30px;"></i></a>
         </div>
       </div>
