--- a/student-home.html
+++ b/student-home.html
@@ -88,7 +88,7 @@
         </div>
       </div>
       <div id="meetingScreen">
-        <video id="activeVideo" autoplay playsinline></video>
+        <video id="activeVideo" autoplay playsinline style="display: none;"></video>
         <video id="myVideo" class="miniVideoStream pull-right" autoplay playsinline muted="muted"></video>
       </div>
       <div id="moduleDetails" style="display: none;">
@@ -116,29 +116,29 @@
           </div>
         </div>
       </div>
-      <div style="display: flex; flex-direction: column; position: absolute; bottom: 217px; right: 17px;">
-        <div style="flex: 1;">
-          <a class="btnCall" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
-              class="fa fa-fw fa-phone-square" style="font-size: 30px;"></i></a>
-        </div>
-        <div style="flex: 1; margin-top: 20px;">
-          <a class="btnFullScreen" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
-              class="fa fa-fw fa-arrows-alt" style="font-size: 30px;"></i></a>
-        </div>
-        <div style="flex: 1; margin-top: 20px;">
-          <a class="btnActivities" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
-              class="fa fa-fw fa-pencil" style="font-size: 30px;"></i></a>
-        </div>
-        <div style="flex: 1; margin-top: 20px;">
-          <a class="btnFacultyAndStudents" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
-              class="fa fa-fw fa-users" style="font-size: 30px;"></i></a>
-        </div>
-        <div style="flex: 1; margin-top: 20px;">
-          <a class="btnChat" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
-              class="fa fa-fw fa-wechat" style="font-size: 30px;"></i></a>
-        </div>
-      </div>
     </footer>
+    <div class="sideBtn" style="display: flex; flex-direction: column; position: absolute; bottom: 143px; right: 17px;">
+      <div style="flex: 1;">
+        <a class="btnCall" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+            class="fa fa-fw fa-phone-square" style="font-size: 30px;"></i></a>
+      </div>
+      <div style="flex: 1; margin-top: 20px;">
+        <a class="btnFullScreen" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+            class="fa fa-fw fa-arrows-alt" style="font-size: 30px;"></i></a>
+      </div>
+      <div style="flex: 1; margin-top: 20px;">
+        <a class="btnActivities" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+            class="fa fa-fw fa-pencil" style="font-size: 30px;"></i></a>
+      </div>
+      <div style="flex: 1; margin-top: 20px;">
+        <a class="btnFacultyAndStudents" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+            class="fa fa-fw fa-users" style="font-size: 30px;"></i></a>
+      </div>
+      <div style="flex: 1; margin-top: 20px;">
+        <a class="btnChat" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+            class="fa fa-fw fa-wechat" style="font-size: 30px;"></i></a>
+      </div>
+    </div>
   </div>
   <script src="js/initializer/school-hook.js"></script>
   <link rel="stylesheet" href="css/school-hook.css">
