--- a/faculty-home.html
+++ b/faculty-home.html
@@ -22,12 +22,13 @@
   <script src="js/others/jquery-migrate-3.0.0.js"></script>
   <script src="js/others/jquery-confirm.min.js"></script>
 
+  <script src="https://kit.fontawesome.com/6399355047.js" crossorigin="anonymous"></script>
   <script src="js/config.js"></script>
+  <script src="js/utils.js"></script>
   <script src="js/storage.js"></script>
   <script src="js/login.js"></script>
   <script src="js/alertConfirm.js"></script>
   <script src="js/ajaxCaller.js"></script>
-  <script src="js/utils.js"></script>
   <script src="js/mainObj.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"
     integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I=" crossorigin="anonymous"></script>
@@ -46,13 +47,11 @@
 <body>
   <div class="container">
     <header>
-      <div style="flex: 1; margin-top: 0px; color: white; background: #3a7cbd; height: 30px; padding-top: 7px;"
+      <div style="flex: 1; margin-top: 0px; color: white; background: #3a7cbd; height: 34px; padding-top: 7px;"
         class="text-center">Virtual School</div>
-      <div class="box-header with-border">
-        <div id="welcome" style="display: none; margin-top: -34px;">
-          <span id="myProfileName" style="color: white;">Please login</span>
-          <div style="color: #cc5a62;" class="btnLogout pull-right">Logout</div>
-        </div>
+      <div id="welcome" style="display: none; margin-top: -28px; margin-left: 10px; margin-right: 10px;">
+        <span id="myProfileName" style="color: white;">Please login</span>
+        <div style="color: #cc5a62;" class="btnLogout pull-right"><i class="fa fa-fw fa-sign-out"></i></div>
       </div>
     </header>
     <div class="body">
@@ -87,44 +86,157 @@
           <a class="text-center" href="registration.html">Register a new membership</a>
         </div>
       </div>
-      <div id="meetingScreen">
-        <video id="activeVideo" autoplay playsinline></video>
-        <video id="myVideo" class="miniVideoStream pull-right" autoplay playsinline muted="muted"></video>
+
+      <div id="moduleHeader" class="box-header with-border text-center" style="padding:0; padding-top: 12px;">
+        <div><a href="#" id="moduleProfile" style="font-weight: bold; font-size: 15px;">Module</a></div>
+        <div id="moduleProfileDetail" style="font-size: 12px;">Module</div>
       </div>
-      <div id="moduleDetails" style="display: none;">
-        <div class="box-header with-border text-center" style="margin-top: -5px;">
-          <div><a href="#" id="moduleProfile" style="font-weight: bold; font-size: 15px;">Module</a></div>
-          <div id="moduleProfileDetail" style="font-size: 12px;">Module</div>
+
+      <div id="chatScreen" style="display: none;">
+        <div class="box box-success">
+          <div class="box-header ui-sortable-handle" style="cursor: move;">
+            <i class="fa fa-comments-o"></i>
+
+            <h3 class="box-title">Chat</h3>
+          </div>
+          <div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 250px;">
+            <div class="box-body chat" id="chat-box"
+              style="display: flex; flex-direction: column; overflow: hidden; width: auto; height: 250px;">
+              <div style="flex: 1;">
+                <a href="#" class="name">
+                  Mike Doe
+                </a>
+                <p class="message">
+                  I would like to meet you to discuss the latest news about
+                  the arrival of the new theme. They say it is going to be one the
+                  best themes on the market
+                </p>
+              </div>
+              <div style="flex: 1;">
+                <a href="#" class="name">
+                  Mike Doe
+                </a>
+                <p class="message">
+                  I would like to meet you to discuss the latest news about
+                  the arrival of the new theme. They say it is going to be one the
+                  best themes on the market
+                </p>
+              </div>
+            </div>
+            <div class="slimScrollBar"
+              style="background: rgb(0, 0, 0) none repeat scroll 0% 0%; width: 7px; position: absolute; top: 0px; opacity: 0.4; display: none; border-radius: 7px; z-index: 99; right: 1px; height: 187.126px;">
+            </div>
+            <div class="slimScrollRail"
+              style="width: 7px; height: 100%; position: absolute; top: 0px; display: none; border-radius: 7px; background: rgb(51, 51, 51) none repeat scroll 0% 0%; opacity: 0.2; z-index: 90; right: 1px;">
+            </div>
+          </div>
+          <!-- /.chat -->
+          <div class="box-footer">
+            <select class="form-control selectChatUsers">
+              <option value="all">Message to Everyone</option>
+            </select>
+            <div class="input-group" style="margin-top: 5px;">
+              <input id="txtChatMessage" class="form-control" placeholder="Type message...">
+
+              <div class="input-group-btn">
+                <button type="button" class="btn btn-success btnSendChatMessage"><i class="fa fa-plus"></i></button>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
+
+      <div id="activities">
         <div class="box-header with-border">
           <span>Activities</span>
         </div>
         <ul class="timeline timeline-inverse" id="ActivityList">
         </ul>
+      </div>
+
+      <div id="meetingScreen" style="display: none;">
+        <video id="activeVideo" autoplay playsinline></video>
+        <div>
+          <video id="myVideo" class="miniVideoStream pull-right" autoplay playsinline muted="muted"
+            style="right:7px; top:37px;">
+          </video>
+          <div id="myVideoActionButtons">
+            <div style="position: absolute;top: 43px; right: 79px; color: #716767;">Me</div>
+            <div style="position: absolute; top:107px; right:57px;"><a class="btnEndCall"
+                style="position: absolute; padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+                  class="fas fa-phone-slash" style="font-size: 17px; color: #675f5f;"></i></a></div>
+            <div style="position: absolute; top:45px; right: 7px;"><a class="btnSaveNetworkBandwidth"
+                style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"> <i class="fa fa-fw fa-recycle"
+                  style="font-size: 17px; color: #675f5f;"></i>
+              </a></div>
+          </div>
+        </div>
+      </div>
+
+      <div id="dailyRead" style="display: none;">
+        <iframe src="images/dailyReading.pdf" title="Daily Reading" style="width: 100%; height: 100vh;"></iframe>
+      </div>
+
+      <div id="studentList" style="display: none;">
         <div class="box-header with-border">
           <span>List of Students</span>
         </div>
         <ul class="users-list clearfix" id="studentImageRoster">
         </ul>
       </div>
+
     </div>
     <footer>
-      <div style="display: flex; flex-wrap: nowrap; overflow-x: auto;" id="remoteVideos" class="videoBoxList"></div>
-      <div id="myModules" style="display: none;">
-        <div class="box-header with-border" style="margin: 0; padding: 4px; color: white; background-color: #5a93cc;">
-          <span class="box-title" style="font-size: 15px; padding-top: 8px;">Choose Modules Below ( Scrollable <--->
-              )</span>
-          <div class="pull-right" style="margin-right: 10px;">
-            <a type="button" class="btn btn-danger btnCall"
-              style="padding-left: 15px; padding-right: 15px; border-radius: 40%;">Call</a>
-          </div>
-        </div>
-        <div class="box-body">
-          <div style="display: flex; flex-wrap: nowrap; overflow-x: auto;" id="moduleList">
+      <div id="remoteVideos" class="videoBoxList"></div>
+      <div id="myModules">
+        <div class="box-body" style="padding: 1px;">
+          <div style="flex: 8; display: flex; flex-wrap: nowrap; overflow-x: auto;" id="moduleList">
           </div>
         </div>
       </div>
     </footer>
+    <div class="sideBtn" style="display: flex; flex-direction: column; position: absolute; bottom: 87px; right: 0px;">
+      <div style="flex: 1;">
+        <a class="btnCall" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+            class="fa fa-fw fa-phone-square" style="font-size: 17px;"></i></a>
+      </div>
+      <div class="btnAddVideo" style="flex: 1; margin-top: 20px; display: none;">
+        <a class="btnAddVideo" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+            class="fas fa-video" style="font-size: 17px;"></i></a>
+      </div>
+      <div class="btnRemoveVideo" style="flex: 1; margin-top: 20px; display: none;">
+        <a class="btnRemoveVideo" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+            class="fas fa-video-slash" style="color: #b43434; font-size: 17px;"></i></a>
+      </div>
+      <div class="btnUnmute" style="flex: 1; margin-top: 20px; display: none;">
+        <a class="btnUnmute" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+            class="fas fa-microphone" style="font-size: 17px;"></i></a>
+      </div>
+      <div class="btnMute" style="flex: 1; margin-top: 20px; display: none;">
+        <a class="btnMute" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+            class="fas fa-microphone-slash" style="color: #b43434; font-size: 17px;"></i></a>
+      </div>
+      <div class="btnFullScreen" style="flex: 1; margin-top: 20px; display: none;">
+        <a class="btnFullScreen" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+            class="fa fa-fw fa-arrows-alt" style="font-size: 17px;"></i></a>
+      </div>
+      <div style="flex: 1; margin-top: 20px;">
+        <a class="btnActivities" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+            class="fa fa-fw fa-pencil" style="font-size: 17px;"></i></a>
+      </div>
+      <div style="flex: 1; margin-top: 20px;">
+        <a class="btnBook" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+            class="fa fa-fw fa-book" style="font-size: 17px;"></i></a>
+      </div>
+      <div style="flex: 1; margin-top: 20px;">
+        <a class="btnFacultyAndStudents" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+            class="fa fa-fw fa-users" style="font-size: 17px;"></i></a>
+      </div>
+      <div style="flex: 1; margin-top: 20px;">
+        <a class="btnChat" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+            class="fa fa-fw fa-wechat" style="font-size: 17px;"></i></a>
+      </div>
+    </div>
   </div>
   <script src="js/initializer/school-hook.js"></script>
   <link rel="stylesheet" href="css/school-hook.css">
