--- a/student-home.html
+++ b/student-home.html
@@ -131,21 +131,18 @@
           </div>
           <!-- /.chat -->
           <div class="box-footer">
-            <div class="input-group">
-              <input class="form-control" placeholder="Type message...">
+            <select class="form-control selectChatUsers">
+              <option value="all">Message to Everyone</option>
+            </select>
+            <div class="input-group" style="margin-top: 5px;">
+              <input id="txtChatMessage" class="form-control" placeholder="Type message...">
 
               <div class="input-group-btn">
-                <button type="button" class="btn btn-success"><i class="fa fa-plus"></i></button>
+                <button type="button" class="btn btn-success btnSendChatMessage"><i class="fa fa-plus"></i></button>
               </div>
             </div>
           </div>
         </div>
-      </div>
-
-      <div id="meetingScreen" style="display: none;">
-        <video id="activeVideo" autoplay playsinline></video>
-        <video id="myVideo" class="miniVideoStream pull-right" autoplay playsinline muted="muted"
-          style="right:7px; top:37px;"></video>
       </div>
 
       <div id="activities">
@@ -154,6 +151,23 @@
         </div>
         <ul class="timeline timeline-inverse" id="ActivityList">
         </ul>
+      </div>
+
+      <div id="meetingScreen" style="display: none;">
+        <video id="activeVideo" autoplay playsinline></video>
+        <div>
+          <video id="myVideo" class="miniVideoStream pull-right" autoplay playsinline muted="muted"
+            style="right:7px; top:37px;">
+          </video>
+          <div style="position: absolute;top: 43px; right: 79px; color: #716767;">Me</div>
+          <div style="position: absolute; top:100px; right:70px;"><a class="btnEndCall"
+              style="position: absolute; padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+                class="fa fa-fw fa-phone-square" style="font-size: 25px; color: #675f5f;"></i></a></div>
+          <div style="position: absolute; top:45px; right: 7px;"><a class="btnSaveNetworkBandwidth"
+              style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"> <i class="fa fa-fw fa-recycle"
+                style="font-size: 17px; color: #675f5f;"></i>
+            </a></div>
+        </div>
       </div>
 
       <div id="dailyRead" style="display: none;">
@@ -167,7 +181,6 @@
         <ul class="users-list clearfix" id="studentImageRoster">
         </ul>
       </div>
-
 
     </div>
     <footer>
