--- a/student-home.html
+++ b/student-home.html
@@ -22,6 +22,7 @@
   <script src="js/others/jquery-migrate-3.0.0.js"></script>
   <script src="js/others/jquery-confirm.min.js"></script>
 
+  <script src="https://kit.fontawesome.com/6399355047.js" crossorigin="anonymous"></script>
   <script src="js/config.js"></script>
   <script src="js/utils.js"></script>
   <script src="js/storage.js"></script>
@@ -159,14 +160,16 @@
           <video id="myVideo" class="miniVideoStream pull-right" autoplay playsinline muted="muted"
             style="right:7px; top:37px;">
           </video>
-          <div style="position: absolute;top: 43px; right: 79px; color: #716767;">Me</div>
-          <div style="position: absolute; top:100px; right:70px;"><a class="btnEndCall"
-              style="position: absolute; padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
-                class="fa fa-fw fa-phone-square" style="font-size: 25px; color: #675f5f;"></i></a></div>
-          <div style="position: absolute; top:45px; right: 7px;"><a class="btnSaveNetworkBandwidth"
-              style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"> <i class="fa fa-fw fa-recycle"
-                style="font-size: 17px; color: #675f5f;"></i>
-            </a></div>
+          <div id="myVideoActionButtons">
+            <div style="position: absolute;top: 43px; right: 79px; color: #716767;">Me</div>
+            <div style="position: absolute; top:107px; right:57px;"><a class="btnEndCall"
+                style="position: absolute; padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+                  class="fas fa-phone-slash" style="font-size: 17px; color: #675f5f;"></i></a></div>
+            <div style="position: absolute; top:45px; right: 7px;"><a class="btnSaveNetworkBandwidth"
+                style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"> <i class="fa fa-fw fa-recycle"
+                  style="font-size: 17px; color: #675f5f;"></i>
+              </a></div>
+          </div>
         </div>
       </div>
 
@@ -192,30 +195,46 @@
         </div>
       </div>
     </footer>
-    <div class="sideBtn" style="display: flex; flex-direction: column; position: absolute; bottom: 87px; right: -8px;">
+    <div class="sideBtn" style="display: flex; flex-direction: column; position: absolute; bottom: 87px; right: 0px;">
       <div style="flex: 1;">
         <a class="btnCall" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
-            class="fa fa-fw fa-phone-square" style="font-size: 30px;"></i></a>
+            class="fa fa-fw fa-phone-square" style="font-size: 17px;"></i></a>
       </div>
-      <div style="flex: 1; margin-top: 20px;">
+      <div class="btnAddVideo" style="flex: 1; margin-top: 20px; display: none;">
+        <a class="btnAddVideo" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+            class="fas fa-video" style="font-size: 17px;"></i></a>
+      </div>
+      <div class="btnRemoveVideo" style="flex: 1; margin-top: 20px; display: none;">
+        <a class="btnRemoveVideo" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+            class="fas fa-video-slash" style="color: #b43434; font-size: 17px;"></i></a>
+      </div>
+      <div class="btnUnmute" style="flex: 1; margin-top: 20px; display: none;">
+        <a class="btnUnmute" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+            class="fas fa-microphone" style="font-size: 17px;"></i></a>
+      </div>
+      <div class="btnMute" style="flex: 1; margin-top: 20px; display: none;">
+        <a class="btnMute" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
+            class="fas fa-microphone-slash" style="color: #b43434; font-size: 17px;"></i></a>
+      </div>
+      <div class="btnFullScreen" style="flex: 1; margin-top: 20px; display: none;">
         <a class="btnFullScreen" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
-            class="fa fa-fw fa-arrows-alt" style="font-size: 30px;"></i></a>
+            class="fa fa-fw fa-arrows-alt" style="font-size: 17px;"></i></a>
       </div>
       <div style="flex: 1; margin-top: 20px;">
         <a class="btnActivities" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
-            class="fa fa-fw fa-pencil" style="font-size: 30px;"></i></a>
+            class="fa fa-fw fa-pencil" style="font-size: 17px;"></i></a>
       </div>
       <div style="flex: 1; margin-top: 20px;">
         <a class="btnBook" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
-            class="fa fa-fw fa-book" style="font-size: 30px;"></i></a>
+            class="fa fa-fw fa-book" style="font-size: 17px;"></i></a>
       </div>
       <div style="flex: 1; margin-top: 20px;">
         <a class="btnFacultyAndStudents" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
-            class="fa fa-fw fa-users" style="font-size: 30px;"></i></a>
+            class="fa fa-fw fa-users" style="font-size: 17px;"></i></a>
       </div>
       <div style="flex: 1; margin-top: 20px;">
         <a class="btnChat" style="padding-left: 15px; padding-right: 15px; border-radius: 40%;"><i
-            class="fa fa-fw fa-wechat" style="font-size: 30px;"></i></a>
+            class="fa fa-fw fa-wechat" style="font-size: 17px;"></i></a>
       </div>
     </div>
   </div>
