Upload and Commit Daily Reading completed.

--- a/faculty-home.html
+++ b/faculty-home.html
@@ -190,17 +190,19 @@
           <div class="box-header with-border">
             <h3 class="box-title">Upload PDF file</h3>
           </div>
-          <div class="box-body">
-            <div class="form-group">
-              <label>Upload PDF file here. (&lt;file&gt;.pdf)</label>
-              <input type="file" id="pdfFile" accept="application/pdf>" />
+          <form>
+            <div class="box-body">
+              <div class="form-group">
+                <label>Upload PDF file here. (&lt;file&gt;.pdf)</label>
+                <input type="file" id="pdfFile" accept="application/pdf" />
 
-              <p class="help-block">File will be visible to users upon upload completion.</p>
+                <p class="help-block">File will be visible to users upon upload completion.</p>
+              </div>
             </div>
-          </div>
-          <div class="box-footer">
-            <button type="button" class="btn btn-primary btnUploadFile">Upload</button>
-          </div>
+            <div class="box-footer">
+              <button type="button" class="btn btn-primary btnUploadFile">Upload</button>
+            </div>
+          </form>
         </div>
 
         <div class="box box-primary">
