--- a/student-home.html
+++ b/student-home.html
@@ -174,7 +174,7 @@
       </div>
 
       <div id="dailyRead" style="display: none;">
-        <iframe src="images/dailyReading.pdf" title="Daily Reading" style="width: 100%; height: 100vh;"></iframe>
+        <iframe id="dailyReadingPDF" src="" title="Daily Reading" style="width: 100%; height: 100vh;"></iframe>
       </div>
 
       <div id="studentList" style="display: none;">
