--- a/student-home.html
+++ b/student-home.html
@@ -132,7 +132,7 @@
           </div>
           <!-- /.chat -->
           <div class="box-footer">
-            <select class="form-control selectChatUsers">
+            <select class="form-control selectChatUser">
               <option value="all">Message to Everyone</option>
             </select>
             <div class="input-group" style="margin-top: 5px;">
