--- a/faculty-home.html
+++ b/faculty-home.html
@@ -100,7 +100,7 @@
             <h3 class="box-title">Chat</h3>
           </div>
           <div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 250px;">
-            <div class="box-body chat" id="chat-box"
+            <div class="box-body chat" id="chatBox"
               style="display: flex; flex-direction: column; overflow: hidden; width: auto; height: 250px;">
               <div style="flex: 1;">
                 <a href="#" class="name">
