--- a/student-home.html
+++ b/student-home.html
@@ -92,35 +92,14 @@
         <div id="moduleProfileDetail" style="font-size: 12px;">Module</div>
       </div>
 
-      <div id="chatScreen" style="display: none;">
+      <div id="chatScreen" style="display: none; margin: 50px; margin-top:70px;">
         <div class="box box-success">
           <div class="box-header ui-sortable-handle" style="cursor: move;">
             <i class="fa fa-comments-o"></i>
 
             <h3 class="box-title">Chat</h3>
           </div>
-          <div class="box-body chat" id="chatBox"
-            style="display: flex; flex-direction: column; overflow: hidden; width: auto; height: 250px;">
-            <div style="flex: 1;">
-              <a href="#" class="name">
-                Mike Doe
-              </a>
-              <p class="message">
-                I would like to meet you to discuss the latest news about
-                the arrival of the new theme. They say it is going to be one the
-                best themes on the market
-              </p>
-            </div>
-            <div style="flex: 1;">
-              <a href="#" class="name">
-                Mike Doe
-              </a>
-              <p class="message">
-                I would like to meet you to discuss the latest news about
-                the arrival of the new theme. They say it is going to be one the
-                best themes on the market
-              </p>
-            </div>
+          <div class="box-body chat" id="chatBox" style="overflow: hidden; width: auto; height: 250px;">
           </div>
           <div class="box-footer">
             <select class="form-control" id="selectChatUser">
