--- a/student-home.html
+++ b/student-home.html
@@ -99,7 +99,7 @@
 
             <h3 class="box-title">Chat</h3>
           </div>
-          <div class="box-body chat" id="chatBox" style="overflow: hidden; width: auto; height: 250px;">
+          <div class="box-body chat" id="chatBox" style="overflow-y: auto; width: auto; height: 250px;">
           </div>
           <div class="box-footer">
             <select class="form-control" id="selectChatUser">
