--- a/student-home.html
+++ b/student-home.html
@@ -54,7 +54,7 @@
         <div style="color: #cc5a62;" class="btnLogout pull-right"><i class="fa fa-fw fa-sign-out"></i></div>
       </div>
     </header>
-    <div class="body">
+    <div class="body" style="background-color: black;">
       <div id="loginScreen" style="display: none;">
         <div class="login-box-body" style="margin: 50px; margin-top: 200px;">
           <p class="login-box-msg">Sign in to start your session</p>
@@ -87,7 +87,8 @@
         </div>
       </div>
 
-      <div id="moduleHeader" class="box-header with-border text-center" style="padding:0; padding-top: 12px;">
+      <div id="moduleHeader" class="box-header with-border text-center"
+        style="padding:0; padding-top: 12px; background-color: white;">
         <div><a href="#" id="moduleProfile" style="font-weight: bold; font-size: 15px;">Module</a></div>
         <div id="moduleProfileDetail" style="font-size: 12px;">Module</div>
       </div>
@@ -124,7 +125,7 @@
         </ul>
       </div>
 
-      <div id="meetingScreen" style="display: none;">
+      <div id="meetingScreen" style="display: none; background-color: black;">
         <video id="activeVideo" autoplay playsinline></video>
         <div>
           <video id="myVideo" class="miniVideoStream pull-right" autoplay playsinline muted="muted"
@@ -156,8 +157,8 @@
       </div>
 
     </div>
-    <footer>
-      <div id="remoteVideos" class="videoBoxList"></div>
+    <footer style="background-color: black;">
+      <div id="remoteVideos" class="videoBoxList" style="background-color: black;"></div>
       <div id="myModules">
         <div class="box-body" style="padding: 1px;">
           <div style="flex: 8; display: flex; flex-wrap: nowrap; overflow-x: auto;" id="moduleList">
