--- a/faculty-home.html
+++ b/faculty-home.html
@@ -172,7 +172,7 @@
         </ul>
       </div>
 
-      <div id="meetingScreen" style="display: none;">
+      <div id="meetingScreen" style="display: none; background-color: black;">
         <video id="activeVideo" autoplay playsinline></video>
         <div>
           <video id="myVideo" class="miniVideoStream pull-right" autoplay playsinline muted="muted"
@@ -234,7 +234,7 @@
       </div>
     </div>
     <footer>
-      <div id="remoteVideos" class="videoBoxList"></div>
+      <div id="remoteVideos" class="videoBoxList" style="background-color: black;"></div>
       <div id="myModules">
         <div class="box-body" style="padding: 1px;">
           <div style="flex: 8; display: flex; flex-wrap: nowrap; overflow-x: auto;" id="moduleList">
