--- a/student-home.html
+++ b/student-home.html
@@ -93,7 +93,7 @@
         <div id="moduleProfileDetail" style="font-size: 12px;">Module</div>
       </div>
 
-      <div id="chatScreen" style="display: none; margin: 50px; margin-top:70px;">
+      <div id="chatScreen" style="display: none; margin: 50px; margin-top:70px; background-color: white;">
         <div class="box box-success">
           <div class="box-header ui-sortable-handle" style="cursor: move;">
             <i class="fa fa-comments-o"></i>
@@ -117,7 +117,7 @@
         </div>
       </div>
 
-      <div id="activities">
+      <div id="activities" style="background-color: white;">
         <div class="box-header with-border">
           <span>Activities</span>
         </div>
@@ -144,11 +144,11 @@
         </div>
       </div>
 
-      <div id="dailyRead" style="display: none;">
+      <div id="dailyRead" style="display: none; background-color: white;">
         <iframe id="dailyReadingPDF" src="" title="Daily Reading" style="width: 100%; height: 100vh;"></iframe>
       </div>
 
-      <div id="studentList" style="display: none;">
+      <div id="studentList" style="display: none; background-color: white;">
         <div class="box-header with-border">
           <span>List of Students</span>
         </div>
